--- a/MedicineWareHouseAndroid/app/src/main/AndroidManifest.xml
+++ b/MedicineWareHouseAndroid/app/src/main/AndroidManifest.xml
@@ -14,7 +14,27 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <!-- 允许应用程序改变网络状态 -->
+            <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+            <!-- 允许应用程序改变WIFI连接状态 -->
+            <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+            <!-- 允许应用程序访问有关的网络信息 -->
+            <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+            <!-- 允许应用程序访问WIFI网卡的网络信息 -->
+            <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+            <!-- 允许应用程序完全使用网络 -->
+            <uses-permission android:name="android.permission.INTERNET" />
         </activity>
+
+        <service
+            android:name=".SocketService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".Constants"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
