--- a/MedicineAndroid/app/src/main/AndroidManifest.xml
+++ b/MedicineAndroid/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jiangxinhou01.medicineandroid">
+    <!-- 允许应用程序完全使用网络 -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -17,9 +19,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+
+        <service
+            android:name=".SocketService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
-    <!-- 允许应用程序完全使用网络 -->
-    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
