--- a/MedicineAndroid/app/src/main/AndroidManifest.xml
+++ b/MedicineAndroid/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Main.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,7 @@
         </activity>
 
         <service
-            android:name=".SocketService"
+            android:name=".Tool.SocketService"
             android:enabled="true"
             android:exported="true"></service>
     </application>
